表情基本完毕

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
     <ListView
         android:layout_weight="1"
         android:background="@color/white"
-        android:id="@+id/llContent"
+        android:id="@+id/lvContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
