--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,22 +61,243 @@
     <!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
 
 
+
     <ListView
         android:layout_weight="1"
-        android:background="@color/white"
-        android:id="@+id/lvContent"
+        android:id="@+id/listViewContent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
 
 
-    <RelativeLayout
-        android:id="@+id/rlComment"
-        android:visibility="gone"
-        android:layout_gravity="bottom"
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/rlComment"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--        <include layout="@layout/layout_comment_view"></include>-->
+<!--    </RelativeLayout>-->
+
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#ecedf1" />
 
-        <include layout="@layout/layout_comment_view"></include>
-    </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="clip_vertical"
+            android:orientation="horizontal"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp">
+
+            <ImageButton
+                android:id="@+id/ib_face"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                android:background="@android:color/transparent"
+                android:clickable="true"
+                android:src="@drawable/weixin_voice" />
+
+            <dz.solc.viewtool.view.editview.FilletEditView
+                android:id="@+id/et_input_container"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                app:e_normalBgColor="@color/trans"
+                app:e_normalStrokeColor="@color/trans"
+                app:e_pressedBgColor="@color/trans"
+                app:e_normalStrokeWidth="1dp"
+                app:e_pressStrokeWidth="1dp"
+                app:e_normalTextColor="@color/black_alpha_112"
+                app:e_pressedTextColor="@color/black_alpha_112"
+                app:e_cornerRadius="@dimen/len_5"
+                android:gravity="center_vertical"
+                android:maxLines="3"
+                android:minHeight="36dp"
+                android:paddingBottom="2dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="2dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <CheckBox
+                android:id="@+id/cb_smile"
+                android:background="@drawable/bg_smile_face"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:button="@null"
+                android:layout_marginLeft="12dp"
+                android:checked="false"
+                android:clickable="true" />
+
+            <RelativeLayout
+                android:layout_width="56dp"
+                android:layout_height="match_parent"
+                android:gravity="bottom">
+
+                <ImageButton
+                    android:id="@+id/ib_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:background="@android:color/transparent"
+                    android:clickable="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginRight="0dp"
+                    android:src="@drawable/weixin_more"
+                    android:visibility="visible" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:button="@null"
+                    android:id="@+id/btn_send"
+                    android:layout_marginLeft="8dp"
+                    android:background="@drawable/btn_send_bg"
+                    android:gravity="center"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:textColor="@color/white"
+                    android:text="发送"
+                    android:layout_marginRight="8dp"
+                    android:visibility="gone"
+                    android:textSize="14sp" />
+            </RelativeLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#ecedf1" />
+
+        <LinearLayout
+            android:id="@+id/ll_face_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+
+            <FrameLayout
+                android:id="@+id/contanierFrameLayout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:visibility="visible"></FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ecedf1"
+                android:visibility="visible" />
+
+            <LinearLayout
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_add"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center"
+                    android:text="+"
+                    android:textSize="25sp"
+                    android:visibility="visible" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ecedf1" />
+
+                <HorizontalScrollView
+                    android:layout_width="wrap_content"
+                    android:layout_height="38dp"
+                    android:scrollbars="none">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="38dp"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+                        <RadioGroup
+                            android:id="@+id/rg_emoji_contanier"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
+
+                            <RadioButton
+                                android:id="@+id/rb_weibo_emoji"
+                                android:background="@drawable/radio_btn_bg"
+                                android:layout_width="60dp"
+                                android:layout_height="match_parent"
+                                android:checked="true"
+                                android:button="@null"
+                                android:drawablePadding="5dp"
+                                android:drawableTop="@drawable/d_hehe"
+                                android:gravity="center"
+                                android:padding="5dp" />
+
+                            <View
+                                android:layout_width="1dp"
+                                android:layout_height="match_parent"
+                                android:background="#ecedf1" />
+
+                            <RadioButton
+                                android:id="@+id/rb_lanxiaohua"
+                                android:background="@drawable/radio_btn_bg"
+                                android:layout_width="60dp"
+                                android:button="@null"
+                                android:layout_height="match_parent"
+                                android:drawablePadding="5dp"
+                                android:drawableTop="@drawable/lxh_haoxihuan"
+                                android:gravity="center"
+                                android:padding="5dp" />
+
+                            <View
+                                android:layout_width="1dp"
+                                android:layout_height="match_parent"
+                                android:background="#ecedf1" />
+
+                            <RadioButton
+                                android:id="@+id/rb_emoji"
+                                android:background="@drawable/radio_btn_bg"
+                                android:layout_width="60dp"
+                                android:button="@null"
+                                android:layout_height="match_parent"
+                                android:drawableTop="@drawable/ecf"
+                                android:gravity="center"
+                                android:padding="5dp" />
+                            <View
+                                android:layout_width="1dp"
+                                android:layout_height="match_parent"
+                                android:background="#ecedf1" />
+                        </RadioGroup>
+                    </LinearLayout>
+                </HorizontalScrollView>
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
